# Icinga 2 | (c) 2019 Icinga GmbH | GPLv2+

add_custom_target(procmgr "${CMAKE_CURRENT_SOURCE_DIR}/build.sh" "${CMAKE_CURRENT_BINARY_DIR}" "${GO}" "${DEP}")

install(
  FILES "${CMAKE_CURRENT_BINARY_DIR}/icinga2-procmgr"
  DESTINATION "${CMAKE_INSTALL_SBINDIR}"
  PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
)
